<resources>
    <string name="app_name">Lexikon der Naturwissenschaften</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_categories">Categories</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_settings">Settings</string>
    <string name="label_language">Language</string>
    <string name="label_text_size">Text Size</string>
    <string name="label_dark_mode">Dark Mode</string>
    <string name="label_offline_mode">Offline Mode</string>
</resources>
